test/types/typedefs/bradc/redefineTypeNames2.good
redefineTypeNames2.chpl:3: syntax error: near 'int'
